styles.css
* {
    font-family: "Roboto", sans-serif;
}

body {
    min-height: 100vh;
    margin: 0;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

button {
    color:#F9FAF8;
    background-color: #3882F6;
    min-width: 110px;
    min-height: 35px;
    border-radius: 7px;
    border: 3px solid #3882F6;
    font-weight: bold;
}

.top button:hover {
    background-color:#F9FAF8;
    color: #3882F6;
    border-color: #F9FAF8;
}

ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    display: flex;
    align-items: center;
    gap: 30px;
}

a {
    text-decoration: none;
    font-size: 18px;
    color: #E5E7EB;
}

img {
    height: 200px;
    width: auto;
    object-fit: contain;
}

.top,.information,
.quote,.signup {
    height: 600px;
    padding: 0 300px;
}

.header {
    display: flex;
    background-color: #1F2937;
    height: 100px;
    justify-content: space-between;
    padding: 0 300px;
}

.logo {
    font-size: 24px;
    color: #F9FAF8;
    font-weight: bold;
}

.top {
    display: flex;
    background-color: #1F2937;
    justify-content: center;
    align-items: center;
    gap: 30px;
}

.left {
    border-color: #ffffff;
    border-radius: 10px;
    display: flex;
    flex-direction: column;
}

.left button {
    margin-top: 15px;
    padding: 8px;
    max-width: 120px;
    background-color:#3882F6;
    color: #F9FAF8;
}

.right img {
    width: 100%;
    height: auto;
    object-fit: cover;
    object-position: bottom;
}

.title {
    font-size: 48px;
    font-weight: 900;
    color: #F9FAF8;
}

.subtext {
    font-size: 18px;
    color: #E5E7EB;
}

.information {
    display: flex;
    background-color:#F9FAF8;
    flex-direction: column;
    justify-content: center;
}


.title2 {
    font-size: 36px;
    color: #1F2937;
    font-weight: 900;
    display: flex;
    justify-content: center;
}

.container {
    display: flex;
    justify-content: center;
    align-items: flex-start;
    margin-bottom: 130px;
    margin-top: 20px;
    gap: 20px;
}

.container div {
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
    flex: 1;
}

.container img {
    object-fit: cover;
    width: 150px;
    height: 150px;
    border-radius: 15px;
    border: 3px solid #3882F6;
}

.quote {
    display: flex;
    background-color: #E5E7EB;
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.quotetext {
    font-size: 36px;
    color: #1F2937;
    font-style: italic;
}

.quotename {
    font-weight: bold;
    text-align: right;
    font-size: 24px;
}

.signup {
    background-color:#F9FAF8;
    display: flex;
    flex-direction: column;
    justify-content: center;
    height: 400px;
}

.calltoaction {
    background-color: #3882F6;
    display: flex;
    padding: 40px 64px;
    border-radius: 15px;
}

.calltoaction div {
    display: flex;
    flex-direction: column;
    margin-right: auto;
}

.title3 {
    color:#F9FAF8;
}

.subtext3 {
    color: #E5E7EB;
}

.calltoaction .signupbutton {
    display: flex;
    justify-content: center;
    margin-left: 40px;
}

.calltoaction button {
    color:#F9FAF8;
    background-color: #3882F6;
    border-color: #E5E7EB;
    min-width: 110px;
    min-height: 35px;
    border-radius: 7px;
    border: 3px solid #F9FAF8;
}

.calltoaction button:hover {
    background-color:#F9FAF8;
    color: #3882F6;
}

.footer {
    display: flex;
    background-color: #1F2937;
    color: #F9FAF8;
    height: 100px;
}

